--- a/src/packages/editor.scss
+++ b/src/packages/editor.scss
@@ -1,3 +1,4 @@
+@import "../iconfont/iconfont.css";
 .editor-wrap {
   width: 100%;
   height: 100%;
@@ -5,7 +6,6 @@
   .editor-right {
     position: absolute;
     width: 260px;
-    // background: #ff0000;
     top: 0;
     bottom: 0;
   }
@@ -57,7 +57,26 @@
     right: 270px;
     left: 270px;
     height: 80px;
-    background: #1890ff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px dashed #ccc;
+
+    &-btn-wrap {
+      width: 60px;
+      height: 60px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      background: #ccc;
+      user-select: none;
+      cursor: pointer;
+      color: #fff;
+      &:not(:first-child) {
+        margin-left: 3px;
+      }
+    }
   }
 
   .editor-container {
@@ -71,7 +90,7 @@
 
       &_content {
         margin: 20px auto;
-        background: #ffff00;
+        border: 1px solid #ecf000;
         position: relative;
       }
     }
@@ -96,4 +115,18 @@
   &::after {
     border: 2px dashed #ff0000;
   }
+}
+
+.line-x {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  border-left: 1px dashed #ff0000;
+}
+
+.line-y {
+  position: absolute;
+  left: 0;
+  right: 0;
+  border-top: 1px dashed #ff0000;
 }
