--- a/src/iconfont/iconfont.css
+++ b/src/iconfont/iconfont.css
@@ -1,16 +1,20 @@
 @font-face {
   font-family: "iconfont"; /* Project id 3469308 */
-  src: url("iconfont.woff2?t=1655560200677") format("woff2"),
-    url("iconfont.woff?t=1655560200677") format("woff"),
-    url("iconfont.ttf?t=1655560200677") format("truetype");
+  src: url("iconfont.woff2?t=1655907784039") format("woff2"),
+    url("iconfont.woff?t=1655907784039") format("woff"),
+    url("iconfont.ttf?t=1655907784039") format("truetype");
 }
 
-[class^="icon"] {
+[class^="icon-"] {
   font-family: "iconfont" !important;
   font-size: 16px;
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-preview:before {
+  content: "\e631";
 }
 
 .icon-control-top:before {
