--- a/src/packages/editor.scss
+++ b/src/packages/editor.scss
@@ -159,3 +159,68 @@
     }
   }
 }
+
+.range {
+  display: inline-flex;
+  align-items: center;
+  width: 220px;
+  min-height: 23px;
+  input {
+    flex: 1;
+    width: 100%;
+    height: 100%;
+  }
+
+  span {
+    margin: 0 5px;
+    display: inline-flex;
+  }
+}
+
+.block-resize {
+  position: absolute;
+  width: 8px;
+  height: 8px;
+  background: #1890ff;
+  z-index: 1000;
+}
+
+.block-resize-top {
+  top: -4px;
+  left: calc(50% - 4px);
+}
+
+.block-resize-bottom {
+  bottom: -4px;
+  left: calc(50% - 4px);
+}
+
+.block-resize-left {
+  left: -4px;
+  top: calc(50% - 4px);
+}
+
+.block-resize-right {
+  right: -4px;
+  top: calc(50% - 4px);
+}
+
+.block-resize-top-left {
+  top: -4px;
+  left: -4px;
+}
+
+.block-resize-top-right {
+  top: -4px;
+  right: -4px;
+}
+
+.block-resize-bottom-left {
+  bottom: -4px;
+  left: -4px;
+}
+
+.block-resize-bottom-right {
+  bottom: -4px;
+  right: -4px;
+}
